--- a/index.html
+++ b/index.html
@@ -43,5 +43,9 @@
         5.Create a Web-Page showing the use of Image-Map in the Web Application.
         <a href="pages/Practical-5.html">Practical-5</a>
     </p>
+     <p>
+        6.Create a layout using CSS layout properties.
+        <a href="pages/Practical-6.html">Practical-6</a>
+    </p>
 </body>
 </html>        
