--- a/index.html
+++ b/index.html
@@ -47,5 +47,9 @@
         6.Create a layout using CSS layout properties.
         <a href="pages/Practical-6.html">Practical-6</a>
     </p>
+     <p>
+        7.Create a Web Page Layout using div tags.
+        <a href="pages/Practical-7.html">Practical-7</a>
+    </p>
 </body>
 </html>        
