--- a/index.html
+++ b/index.html
@@ -51,5 +51,9 @@
         7.Create a Web Page Layout using div tags.
         <a href="pages/Practical-7.html">Practical-7</a>
     </p>
+    <p>
+        8.Create a Web Page having fixed Navigation Bar.
+        <a href="pages/Practical-8.html"></a>
+    </p>
 </body>
 </html>        
