--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </p>
     <p>
         8.Create a Web Page having fixed Navigation Bar.
-        <a href="pages/Practical-8.html"></a>
+        <a href="pages/Practical-8.html">Practicl-8</a>
     </p>
 </body>
 </html>        
