--- a/index.html
+++ b/index.html
@@ -67,5 +67,9 @@
         11.Create a Table that represent Live Practical Book Records.
         <a href="pages/Practical-11.html">Practical-11</a>
     </p>
+     <p>
+        12.Create a Custom Price Table Template.
+        <a href="pages/Practical-12.html">Practical-12</a>
+    </p>
 </body>
 </html>        
