--- a/index.html
+++ b/index.html
@@ -71,5 +71,9 @@
         12.Create a Custom Price Table Template.
         <a href="pages/Practical-12.html">Practical-12</a>
     </p>
+     <p>
+        13.Create a Responsive Footer Template.
+        <a href="pages/Practical-13.html">Practical-13</a>
+    </p>
 </body>
 </html>        
