--- a/index.html
+++ b/index.html
@@ -79,5 +79,9 @@
         14.Create Login Form with different Templates.
         <a href="pages/Practical-14.html">Practical-14</a>
     </p>
+    <p>
+        15.Create a Counter Page using JavaScript.
+        <a href="pages/Practical-15.html">Practical-15</a>
+    </p>
 </body>
 </html>        
