--- a/index.html
+++ b/index.html
@@ -83,5 +83,9 @@
         15.Create a Counter Page using JavaScript.
         <a href="pages/Practical-15.html">Practical-15</a>
     </p>
+     <p>
+        16.Create a To-do List using JavaScript.
+        <a href="pages/Practical-16.html">Practical-16</a>
+    </p>
 </body>
 </html>        
