--- a/index.html
+++ b/index.html
@@ -91,5 +91,9 @@
         17.Create a Page with Live Clock with Dynamic Greeting Background and Data Stored in Browser Local Storage.
         <a href="pages/Practical-17.html">Practical-17</a>
     </p>
+     <p>
+        18.Create an HTML Form and Validate it with Javascript (Client-side Programming Language). 
+        <a href="pages/Practical-18.html">Practical-18</a>
+    </p>
 </body>
 </html>        
