--- a/index.html
+++ b/index.html
@@ -95,5 +95,9 @@
         18.Create an HTML Form and Validate it with Javascript (Client-side Programming Language). 
         <a href="pages/Practical-18.html">Practical-18</a>
     </p>
+    <p>
+        19.Create an HTML page with Multi-Step Form. 
+        <a href="pages/Practical-19.html">Practical-19</a>
+    </p>
 </body>
 </html>        
