--- a/index.html
+++ b/index.html
@@ -99,5 +99,9 @@
         19.Create an HTML page with Multi-Step Form. 
         <a href="pages/Practical-19.html">Practical-19</a>
     </p>
+    <p>
+        20.Create a Responsive Layout using Bootstrap Grid System.  
+        <a href="pages/Practical-20.html">Practical-20</a>
+    </p>
 </body>
 </html>        
