--- a/index.html
+++ b/index.html
@@ -103,5 +103,9 @@
         20.Create a Responsive Layout using Bootstrap Grid System.  
         <a href="pages/Practical-20.html">Practical-20</a>
     </p>
+    <p>
+        21.Fullstack-1 Practical(TEMPLATE 2).  
+        <a href="pages/Template2.html">Template-2</a>
+    </p>
 </body>
 </html>        
